finished with client section

--- a/index.html
+++ b/index.html
@@ -67,14 +67,20 @@
             </div>
           </div>
           <div class="hero-image">
-            <img src="./assets/Group 686.svg" />
+            <img src="./assets/hero-main.svg" />
           </div>
         </div>
       </div>
-      <img class="upper-image" src="./assets/62.png" />
-      <img class="bottom-right-image" src="./assets/Fill 1.png" />
-      <img class="bottom-left-image" src="./assets/24.png" />
+      <img class="upper-image" src="./assets/hero-top-right.png" />
+      <img class="bottom-right-image" src="./assets/hero-bottom-right.png" />
+      <img class="bottom-left-image" src="./assets/hero-bottom-left.png" />
     </section>
-    <div></div>
+    <section class="clients">
+      <div class="container">
+        <h3>Over 32k+ software businesses growing with AR Shakir.</h3>
+        <div class="client-logos" id="client-logos"></div>
+      </div>
+    </section>
+    <script src="./js/main.js"></script>
   </body>
 </html>
