protfolio section completed

--- a/index.html
+++ b/index.html
@@ -81,6 +81,36 @@
         <div class="client-logos" id="client-logos"></div>
       </div>
     </section>
+    <section class="portfolio-tracking">
+      <div class="container">
+        <div class="tracking-header">
+          <div class="text">
+            <p class="automated">
+              Automated<br />
+              portfolio tracking
+            </p>
+            <p class="sub-title">
+              Yet bed any for travelling assistance indulgence unpleasing.<br />
+              Not thoughts all exercise blesssing.
+            </p>
+          </div>
+          <div class="testimonial">
+            <p>
+              Wise busy past both park when an ye no. Nay likely her length
+              sooner thrown sex lively income. The expense windows adapted sir.
+              Wrong widen.
+            </p>
+            <span>- Mike Taylor, Web Designer</span>
+            <div class="quote-left">
+              <i class="fa-solid fa-quote-left"></i>
+            </div>
+          </div>
+        </div>
+        <div class="tracking-methods" id="tracking-methods">
+          
+        </div>
+      </div>
+    </section>
     <script src="./js/main.js"></script>
   </body>
 </html>
