why chhoose us section done

--- a/index.html
+++ b/index.html
@@ -106,8 +106,65 @@
             </div>
           </div>
         </div>
-        <div class="tracking-methods" id="tracking-methods">
-          
+        <div class="tracking-methods" id="tracking-methods"></div>
+      </div>
+    </section>
+    <section class="track-payments">
+      <div class="container">
+        <div class="payments">
+          <div class="image-container">
+            <img src="./assets/why-chooseUsMain.svg" alt="Payment tracking" />
+            <img class="image-top" src="./assets/whyChooseUs-top.svg" />
+          </div>
+
+          <div class="payments-content">
+            <span class="why-choose">Why Choose Us</span>
+            <h2>Track your payments on the go with the best way possible</h2>
+            <p>
+              Indulgence way everything joy alteration boisterous the
+              attachment. Party we years to order allow asked of.
+            </p>
+            <div class="line"></div>
+            <ul class="features-list">
+              <li>
+                <i class="fa-sharp fa-solid fa-circle-check"></i>
+                Get Overview at a glance
+              </li>
+              <li>
+                <i class="fa-sharp fa-solid fa-circle-check"></i>
+                Deposit funds easily, security
+              </li>
+              <li>
+                <i class="fa-sharp fa-solid fa-circle-check"></i>
+                Get Live Support
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="save-money">
+      <div class="container">
+        <div class="save-money-container">
+          <div class="save-money-content">
+            <span class="why-choose">Why Choose Us</span>
+            <h2>Save money with proper transaction</h2>
+            <p>
+              We so opinion friends me message as delight. Whole front do of
+              plate heard oh ought. His defective nor convinced residence own.
+            </p>
+            <div class="testimonial">
+              <p>
+                Wise busy past both park when an ye no. Nay likely her length
+                sooner thrown sex lively income. The expense windows.
+              </p>
+              <span>- Mike Taylor, Web Designer</span>
+              <div class="quote-left">
+                <i class="fa-solid fa-quote-left"></i>
+              </div>
+            </div>
+          </div>
+          <img src="./assets/save-money.svg" />
         </div>
       </div>
     </section>
