--- a/index.html
+++ b/index.html
@@ -168,6 +168,48 @@
         </div>
       </div>
     </section>
+    <section class="features">
+      <div class="container">
+        <div class="features-container">
+          <h2>Features that blows mind</h2>
+          <p>
+            We so opinion friends me message as delight. Whole front do of plate
+            heard<br />
+            oh ought. His defective nor convinced residence own.
+          </p>
+          <div class="features-grid">
+            <div class="feature-card">
+              <div>
+                <div class="upper-box"></div>
+                <div class="lower-box"></div>
+              </div>
+              <h3>Really boy law county she unable her sister</h3>
+              <p>
+                We so opinion friends me message as delight. Whole front do of
+                plate heard oh ought.
+              </p>
+            </div>
+            <div class="feature-card">
+              <div>
+                <div class="upper-box"></div>
+                <div class="lower-box purple"></div>
+              </div>
+              <h3>Among sex are leave law built now</h3>
+              <p>
+                We so opinion friends me message as delight. Whole front do of
+                plate heard oh ought.
+              </p>
+            </div>
+            <div class="feature-small-card">
+              <h3>Merits behind on afraid or warmly</h3>
+            </div>
+            <div class="feature-small-card">
+              <h3>Believing neglected so so allowance existence</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="./js/main.js"></script>
   </body>
 </html>
