--- a/index.html
+++ b/index.html
@@ -210,6 +210,63 @@
         </div>
       </div>
     </section>
+    <section class="testimonials">
+      <div class="container">
+        <div class="header">
+          <div class="header-left">
+            <h2>Testimonials</h2>
+            <p>
+              We so opinion friends me message as delight. Whole front do of
+              plate heard oh<br />
+              ought. His defective nor convinced residence own.
+            </p>
+          </div>
+          <img src="./assets/testimonial.svg" />
+        </div>
+        <div class="testimonials-container">
+          <div class="testimonial-card">
+            <div class="testimonial-content">
+              <p>
+                Wise busy past both park when an ye no. Nay likely her length
+                sooner thrown sex lively income. The expense windows. Blessing
+                welcomed ladyship.
+              </p>
+              <span class="testimonial-author"
+                >- Mike Taylor, Web Designer</span
+              >
+            </div>
+
+            <img src="./assets/womenSmiling.png" alt="Woman smiling" />
+          </div>
+          <div class="testimonial-card">
+            <div class="testimonial-content">
+              <div class="quote-icon">"</div>
+              <p>
+                Wise busy past both park when an ye no. Nay likely her length
+                sooner thrown sex lively income. The expense windows. Blessing
+                welcomed ladyship.
+              </p>
+              <div class="testimonial-author">- Mike Taylor, Web Designer</div>
+            </div>
+
+            <img src="/assets/thumbsUp.png" alt="Man with thumbs up" />
+          </div>
+          <div class="testimonial-card">
+            <div class="testimonial-content">
+              <div class="quote-icon">"</div>
+              <p>
+                Wise busy past both park when an ye no. Nay likely her length
+                sooner thrown sex lively income. The expense windows. Blessing
+                welcomed ladyship.
+              </p>
+              <div class="testimonial-author">- Mike Taylor, Web Designer</div>
+            </div>
+
+            <img src="/assets/thumbsUp.png" alt="Man with thumbs up" />
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="./js/main.js"></script>
   </body>
 </html>
