completed stats section

--- a/index.html
+++ b/index.html
@@ -237,6 +237,9 @@
             </div>
 
             <img src="./assets/womenSmiling.png" alt="Woman smiling" />
+            <div class="quote-left">
+              <i class="fa-solid fa-quote-left"></i>
+            </div>
           </div>
           <div class="testimonial-card">
             <div class="testimonial-content">
@@ -253,7 +256,6 @@
           </div>
           <div class="testimonial-card">
             <div class="testimonial-content">
-              <div class="quote-icon">"</div>
               <p>
                 Wise busy past both park when an ye no. Nay likely her length
                 sooner thrown sex lively income. The expense windows. Blessing
@@ -266,6 +268,35 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="stats">
+      <div class="container">
+        <div class="stats-inner">
+          <div class="stats-text">We speak with our powerful statistics</div>
+          <div class="line"></div>
+          <div class="stats-numbers">
+            <div class="stat">
+              <div class="stat-number">1M+</div>
+              <div class="stat-label">
+                <i class="fa-solid fa-user"></i>Active Users
+              </div>
+            </div>
+            <div class="stat">
+              <div class="stat-number">30K+</div>
+              <div class="stat-label">
+                <i class="fa-solid fa-star"></i>5-Stars Reviews
+              </div>
+            </div>
+            <div class="stat">
+              <div class="stat-number">$252M</div>
+              <div class="stat-label">
+                <i class="fa-solid fa-star"></i>Transactions
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img src="./assets/stats-left.svg"/>
     </section>
     <script src="./js/main.js"></script>
   </body>
