--- a/index.html
+++ b/index.html
@@ -296,7 +296,118 @@
           </div>
         </div>
       </div>
-      <img src="./assets/stats-left.svg"/>
+      <img src="./assets/stats-left.svg" />
+    </section>
+    <section class="blogs">
+      <div class="container">
+        <span class="recent">Recent Blogs</span>
+        <div class="blog-main">
+          <div class="main-text">
+            <span>BEST PRACTICES</span>
+            <p>
+              In design active temper be uneasy.<br />
+              Thirty for remove plenty regard.
+            </p>
+            <a>Read more <i class="fa-solid fa-arrow-right"></i></a>
+          </div>
+          <img src="./assets/blogs-group.png" />
+        </div>
+        <div class="blogs-group">
+          <div class="blog-card">
+            <div class="blog-text">
+              <span class="blog-card-practises">Best Practices</span>
+              <p class="blog-card-body">
+                Partiality on or continuing particular principles as.
+              </p>
+            </div>
+            <img src="./assets/blog1 (1).png" />
+          </div>
+          <div class="blog-card">
+            <div class="blog-text">
+              <span class="blog-card-practises">Best Practices</span>
+              <p class="blog-card-body">
+                Partiality on or continuing particular principles as.
+              </p>
+            </div>
+            <img src="./assets/blog1 (1).png" />
+          </div>
+          <div class="blog-card">
+            <div class="blog-text">
+              <span class="blog-card-practises">Best Practices</span>
+              <p class="blog-card-body">
+                Partiality on or continuing particular principles as.
+              </p>
+            </div>
+            <img src="./assets/blog1 (1).png" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="faq">
+      <div class="container">
+        <h2>
+          Frequently asked<br />
+          questions
+        </h2>
+        <div class="question-section">
+          <div class="questions">
+            <div class="faq-card">
+              <div class="faq-title">
+                <span class="title">
+                  The expense windows adapted sir. Wrong widen drawn.
+                </span>
+                <span class="plus">+</span>
+              </div>
+              <p>
+                Offending belonging promotion provision an be oh consulted
+                ourselves it. Blessing welcomed ladyship she met humoured sir
+                breeding her.
+              </p>
+            </div>
+            <div class="faq-card">
+              <div class="faq-title">
+                <span class="title">
+                  The expense windows adapted sir. Wrong widen drawn.
+                </span>
+                <span class="plus">+</span>
+              </div>
+            </div>
+            <div class="faq-card">
+              <div class="faq-title">
+                <span class="title">
+                  The expense windows adapted sir. Wrong widen drawn.
+                </span>
+                <span class="plus">+</span>
+              </div>
+            </div>
+            <div class="faq-card">
+              <div class="faq-title">
+                <span class="title">
+                  The expense windows adapted sir. Wrong widen drawn.
+                </span>
+                <span class="plus">+</span>
+              </div>
+            </div>
+            <div class="faq-card">
+              <div class="faq-title">
+                <span class="title">
+                  The expense windows adapted sir. Wrong widen drawn.
+                </span>
+                <span class="plus">+</span>
+              </div>
+            </div>
+          </div>
+          <div class="more-questions">
+            <i class="fa-sharp fa-solid fa-message"></i>
+            <span>Do you have more questions?</span>
+            <p>
+              End-to-end payments and financial management in a single solution.
+              Meet the right platform to help realize.
+            </p>
+            <button>Shoot a Direct Mail</button>
+          </div>
+        </div>
+      </div>
     </section>
     <script src="./js/main.js"></script>
   </body>
