discover section completed

--- a/index.html
+++ b/index.html
@@ -409,6 +409,22 @@
         </div>
       </div>
     </section>
+    <section class="discover-section">
+      <div class="container">
+        <div class="discover-container">
+          <span
+            >Discover a better way to<br />
+            manage spendings</span
+          >
+          <button>Get Started Now</button>
+          <img class="jickjack-left" src="./assets/jickjack.svg"></img>
+          <img class="cones-left" src="./assets/discover-cones.svg"></img>
+          <img class="dots" src="./assets/dicover-dot.svg"></img>
+          <img class="jickjack-right" src="./assets/jickjack.svg"></img>
+          <img class="cones-right" src="./assets/discover-cones-right.svg"></img>
+        </div>
+      </div>
+    </section>
     <script src="./js/main.js"></script>
   </body>
 </html>
