--- a/index.html
+++ b/index.html
@@ -253,6 +253,9 @@
             </div>
 
             <img src="/assets/thumbsUp.png" alt="Man with thumbs up" />
+            <div class="quote-left">
+              <i class="fa-solid fa-quote-left"></i>
+            </div>
           </div>
           <div class="testimonial-card">
             <div class="testimonial-content">
@@ -265,6 +268,9 @@
             </div>
 
             <img src="/assets/thumbsUp.png" alt="Man with thumbs up" />
+            <div class="quote-left">
+              <i class="fa-solid fa-quote-left"></i>
+            </div>
           </div>
         </div>
       </div>
@@ -326,28 +332,31 @@
             <div class="blog-text">
               <span class="blog-card-practises">Best Practices</span>
               <p class="blog-card-body">
-                Partiality on or continuing particular principles as.
+                Village did removed enjoyed explain
               </p>
             </div>
-            <img src="./assets/blog1 (1).png" />
+            <img src="./assets/blog1 (2).png" />
           </div>
           <div class="blog-card">
             <div class="blog-text">
               <span class="blog-card-practises">Best Practices</span>
               <p class="blog-card-body">
-                Partiality on or continuing particular principles as.
+                Wise busy past both park when an ye no. Nay likely her length.
               </p>
             </div>
-            <img src="./assets/blog1 (1).png" />
+            <img src="./assets/blog1 (3).png" />
           </div>
         </div>
       </div>
     </section>
     <section class="faq">
+      <img class="faq-left" src="./assets/faq-left.svg" />
+      <img class="faq-right" src="./assets/faq-right.svg" />
+      <img />
       <div class="container">
         <h2>
-          Frequently asked<br />
-          questions
+          Frequently<br />
+          asked questions
         </h2>
         <div class="question-section">
           <div class="questions">
@@ -417,14 +426,63 @@
             manage spendings</span
           >
           <button>Get Started Now</button>
-          <img class="jickjack-left" src="./assets/jickjack.svg"></img>
-          <img class="cones-left" src="./assets/discover-cones.svg"></img>
-          <img class="dots" src="./assets/dicover-dot.svg"></img>
-          <img class="jickjack-right" src="./assets/jickjack.svg"></img>
-          <img class="cones-right" src="./assets/discover-cones-right.svg"></img>
+          <img class="jickjack-left" src="./assets/jickjack.svg" />
+          <img class="cones-left" src="./assets/discover-cones.svg" />
+          <img class="dots" src="./assets/dicover-dot.svg" />
+          <img class="jickjack-right" src="./assets/jickjack.svg" />
+          <img class="cones-right" src="./assets/discover-cones-right.svg" />
         </div>
       </div>
     </section>
+    <footer>
+      <div class="container">
+        <div class="footer-container">
+          <div class="ar-shakir">
+            <span>AR Shakir</span>
+            <p>Finance helps companies manage payments easily.</p>
+            <div class="social-media">
+              <i class="fa-brands fa-linkedin-in"></i>
+              <i class="fa-brands fa-facebook-messenger"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-solid fa-infinity"></i>
+            </div>
+          </div>
+          <div class="company">
+            <span>Company</span>
+            <ul>
+              <li>About Us</li>
+              <li>Careers</li>
+              <li>BLog</li>
+              <li>Pricing</li>
+            </ul>
+          </div>
+          <div class="resources">
+            <span>Resources</span>
+            <ul>
+              <li>Proposal Template</li>
+              <li>Invoice Template</li>
+              <li>Tutorial</li>
+              <li>How to write a contract</li>
+            </ul>
+          </div>
+          <div class="join-newsletter">
+            <span>Join Our Newsletter</span>
+            <div class="subscribe-part">
+              <input type="email" placeholder="Your email address" />
+              <button>Subscribe</button>
+            </div>
+            <p>
+              * Will send you weekly updates for your better finance management.
+            </p>
+          </div>
+        </div>
+        <div class="footer-line">
+          <div class="copyright">
+            Copyright @ AR Shakir 2022. All Rights Reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="./js/main.js"></script>
   </body>
 </html>
